--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
 	],
 	"scripts": {
 		"start": "node src/index.js",
-		"dev": "nodemon src/index.js"
+		"dev": "nodemon src/index.js",
+		"prod": "NODE_ENV=production node src/index.js",
+		"build": "echo 'No build step required for Node.js'",
+		"test": "echo 'Tests not implemented yet'",
+		"validate": "node validate-deployment.js",
+		"deploy-check": "npm run validate"
 	},
 	"author": {
 		"name": "Sayan Banerjee",
@@ -28,6 +33,7 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
+		"ejs": "^3.1.10",
 		"express": "^4.18.2",
 		"express-rate-limit": "^7.5.1",
 		"jsonwebtoken": "^9.0.2",
